# solaredge-modbus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: solaredge-modbus.yml
src/: der_ac.rs  discover.rs  error.rs  lib.rs  meter.rs  slot.rs  tcp_client.rs
tests/: tests.rs
